Fix control label text being too light 'dark mode' - Issue #286

--- a/css/huvis_controls.css
+++ b/css/huvis_controls.css
@@ -547,7 +547,7 @@ a.git_commit_hash_watermark {
 }
 
 .theme_black .label {
-  color: #ddd;
+  /* color: #ddd; */
 }
 
 /* change label color in command panel */
